Updated the upstream, M1 M2, MUSCL, and plan sections

--- a/Proposal/bib.bib
+++ b/Proposal/bib.bib
@@ -22,6 +22,16 @@ doi = {https://doi.org/10.1016/j.crhy.2004.10.001},
 url = {https://www.sciencedirect.com/science/article/pii/S1631070504001732},
 author = {Emmanuel {Le Meur} and Olivier Gagliardini and Thomas Zwinger and Juha Ruokolainen},
 }
+@article{Gottlieb1996,
+author = {Gottlieb, Sigal and Shu, Chi-Wang},
+year = {1996},
+month = {08},
+pages = {},
+title = {Total Variation Diminishing Runge-Kutta Schemes.},
+volume = {67},
+journal = {Mathematics of Computation},
+doi = {10.1090/S0025-5718-98-00913-2}
+}
 
 @article{AHLKRONA2016,
 title = {Dynamically coupling the non-linear Stokes equations with the shallow ice approximation in glaciology: Description and first applications of the ISCAL method},
