Updates from Overleaf

--- a/Proposal/bib.bib
+++ b/Proposal/bib.bib
@@ -9,6 +9,26 @@
   pages =	 {372–377}
 }
 
+@inbook{Holdsworth2006,
+author = {Holdsworth, G. and Demuth, Michael and Beck, T.M.H.},
+year = {2006},
+month = {01},
+pages = {59-79},
+title = {Radar measurements of ice thickness on Peyto Glacier, Alberta Geophysical and Climatic Implications},
+isbn = {0-660-17683-1}
+}
+
+@article{kehrl2014,
+title={Volume loss from lower Peyto Glacier, Alberta, Canada, between 1966 and 2010}, 
+volume={60}, 
+DOI={10.3189/2014JoG13J039}, 
+number={219},
+journal={Journal of Glaciology}, 
+publisher={Cambridge University Press}, 
+author={Kehrl, Laura M. and Hawley, Robert L. and Osterberg, Erich C. and Winski, Dominic A. and Lee, Alexander P.}, 
+year={2014}, 
+pages={51–56}}
+
 @article{LEMEUR2004,
 title = {Glacier flow modelling: a comparison of the Shallow Ice Approximation and the full-Stokes solution},
 journal = {Comptes Rendus Physique},
