--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -214,15 +214,15 @@ which can be integrated from the bed height to the free surface of the glacier i
 \end{gather}
 \end{subequations}
 giving us the flux method used in the standard solving method of the SIA \citep{Jarosch2013, Greve2009}.
-\subsubsection{M1 and M2 Method}
-Two common methods used for discretization in ice sheet models are the M1 and M2 method. Both use a regular mesh with a finite volume discretization \cite{Jarosch2013,Hindmarsh1996,Huybrechts1996}.  Each cell in the mesh has a x and y flux value. The x flux value of $q^x_{k, l+1/2}$  is at the cell boundary between the $(k,l)$ and $(k+1,l) $ cells and the y flux value of $q^y_{k+1/2, l}$ is at the cell boundary between the $(k,l)$ and $(k,l+1)$ cells, see Figure \ref{fig:Grid}. 
+\subsubsection{M2 and M3 Method}
+Two common methods used for discretization in ice sheet models are the M2 and M3 method. Both use a regular mesh with a finite volume discretization \cite{Jarosch2013,Hindmarsh1996,Huybrechts1996}.  Each cell in the mesh has a x and y flux value. The x flux value of $q^x_{k, l+1/2}$  is at the cell boundary between the $(k,l)$ and $(k+1,l) $ cells and the y flux value of $q^y_{k+1/2, l}$ is at the cell boundary between the $(k,l)$ and $(k,l+1)$ cells, see Figure \ref{fig:Grid}. 
 \begin{figure}[H]
     \centering
     \includegraphics[width=10cm]{Grid.jpg}
     \caption{Visual depiction of the mesh}
     \label{fig:Grid}
 \end{figure}
-M1 and M2 relate the fluxes the the surface elevation differences with
+M2 and M3 relate the fluxes the the surface elevation differences with
 \begin{subequations}
 \begin{gather}
     q^{y, i+1}_{k, l+1/2}=-D^i_{k, l+1/2}\frac{\tilde{s}^{i+1}_{k, l+1}-(\tilde{s}^{i+1}_{k, l}}{\Delta y} \\
@@ -235,12 +235,12 @@ The norm of the surface gradient at the cell boundary is then defined to be
 \end{equation}
 
 
-The M1 discritization used the average value of $h$ over the cell
-\begin{equation}
+The M2 discretization used the average value of $h$ over the cell
+\begin{equation} \label{M2}
     D^i_{k+1/2,l}=\Gamma\left(\frac{h^i_{k,l}+h^i_{k+1,l}}{2}\right)^{n+2}|\nabla s ^i|^{n-1}_{k+1/2,l}
 \end{equation}
-and the M2 discritization is the average over $h^{n+2}$
-\begin{equation}
+and the M3 discretization is the average over $h^{n+2}$
+\begin{equation} \label{M3}
     D^i_{k+1/2,l}=\Gamma\left(\frac{{h^i_{k,l}}^{n+2}+{h^i_{k+1,l}}^{n+2}}{2}\right)|\nabla s ^i|^{n-1}_{k+1/2,l}
 \end{equation}
 where $\Gamma$ is a proportionality coefficient relative the stress of the ice \citep{Jarosch2013}. 
@@ -263,7 +263,7 @@ $u$ is defined as
 \end{equation}
 a simple upwinding scheme applied to h defines the upstream ice thickness as 
 \begin{align}
-    hup^i_{k+1/2,l}= 
+    {h_{up}}^i_{k+1/2,l}= 
 	\begin{cases}
     h^i_{k,l}& \text{if } s^i_{k+1,l} \leq s^i_{k,l} \\
     h^i_{k+1,l}              & \text{if }  s^i_{k+1,l} > s^i_{k,l}
@@ -272,7 +272,7 @@ a simple upwinding scheme applied to h defines the upstream ice thickness as
 
 the diffusivity is then 
 \begin{equation}
-D^i_{k+1/2,l} = \Gamma \left( \frac{h^i_{k,l} - h^i_{k+1,l}}{2}\right)^{n+1} hup^i_{k+1/2,l}\left[\left( \frac{s^i_{k,l+1}-s^i_{k,l-1}+ s^i{k+1,l+1}-s^i_{k+1,l-1}}{4 \Delta y}\right)^2+ \left(\frac{s^i_{k+1,l}-s^i_{k,l}}{\Delta x}\right)^2\right]
+D^i_{k+1/2,l} = \Gamma \left( \frac{h^i_{k,l} - h^i_{k+1,l}}{2}\right)^{n+1} {h_{up}}^i_{k+1/2,l}\left[\left( \frac{s^i_{k,l+1}-s^i_{k,l-1}+ s^i_{k+1,l+1}-s^i_{k+1,l-1}}{4 \Delta y}\right)^2+ \left(\frac{s^i_{k+1,l}-s^i_{k,l}}{\Delta x}\right)^2\right]
 \end{equation}
 And use a forward Euler step to solve for equation \ref{upstream} \cite{Jarosch2013}. 
 
@@ -346,20 +346,16 @@ and the diffusivisites for the $D^i_{k-1/2,l}$ , $D^i_{k,l-1/2}$ , and $D^i_{k,l
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=13cm]{JaroschPaperFigure3.png}
-    \caption{A reproduction of a figure from \citet{Jarosch2013} showing the results of various models applied to a cliff benchmark. Upstream is solving the SIA by applying an upwinding scheme to it. M2 is the results from the standard numerical solving method described in equation \ref{timestep}. Eqs (56) and (57) are the exact solutions to this glacier bed. Each line is a 1000 year timestep over 50 000 years. From this you can see, that the Upstream and M2 method do not converge towards the explicit solution, and have extra mass, the MUSCL superbee method does converge towards the exact solution.
+    \includegraphics[width=13cm]{Glacier Model.png}
+    \caption{A reproduction of a figure from \citet{Jarosch2013} showing the results of various models applied to a cliff benchmark. M2 is the results from the standard numerical solving method described in equation \ref{M2}. M3 is the results from the standard numerical solving method described in equation \ref{M3}.  Upstream is solving the SIA using equation \ref{upstream} MUSCL is solving the SIA using equation \ref{jarosch}. Each line is a 1000 year timestep over 50 000 years. From this you can see, that the M2, M3, and upstream method do not converge towards the exact solution, and have extra mass. The MUSCL superbee method does converge towards the exact solution.
 }
     \label{fig:JaroschPaper}
 \end{figure}
 
-The MUSCL superbee method was attempted to be adapted for more complex topography by \citet{Clarke2015}, who found that when adapting the diffusivity constants to their model, they still found violations of conservation of mass occasionally. Their solution to this was to check for conservation violations at every timestep, and if one was found, apply an adaptive time step and recalculate the ice thickness. 
-
-\subsubsection{Exact Solutions to the Cliff Benchmark}
+The MUSCL method was attempted to be adapted for more complex topography by \citet{Clarke2015}, who found that when adapting the diffusivity constants to their model, they still found violations of conservation of mass occasionally. Their solution to this was to check for conservation violations at every timestep, and if one was found, apply an adaptive time step and recalculate the ice thickness. 
 
 \subsection{Research Gaps}
-Many of the models based on the SIA have research gaps. The one being addressed in this research is the violation of mass conservation that arises from current methods of solving the SIA. The standard method does not conserve mass in in steep terrain where the bed is thin due to the spatial discretization. The the MUSCL superbee method proposed by \citet{Jarosch2013} is not applicable to glaciers with complex topography or glaciers with multiple flow lines, as is discussed in \citet{Maussion2019}. This means that it is not applicable in many real world applications currently, and only works as a benchmark to judge your results against. There are also new numerical solving methods for these types of conservation problems, called conservative methods for finite difference methods associated with hyperbolic equations, which may work to better model glaciers when using the SIA. 
-
-
+Many of the models based on the SIA have research gaps. The one being addressed in this research is the violation of mass conservation that arises from current methods of solving the SIA. The M2, M3, and upstream methods do not conserve mass in in steep terrain where the bed is thin due to the spatial discretization. This is because the numerical approximations of the PDEs are not mass conserving. The the MUSCL method proposed by \citet{Jarosch2013} is not currently applicable to glaciers with complex topography or glaciers with multiple flow lines, as is discussed in \citet{Maussion2019}. This means that it is not applicable in many real world applications currently, and only works as a benchmark to judge your results against. There are also new numerical solving methods for these types of conservation problems, called conservative methods for finite difference methods associated with hyperbolic equations, which may work to better model glaciers when using the SIA. By extending the MUSCL method into complex terrain, and by applying new numerical techniques to the SIA, we will be better able to model mass conserving glaciers
 
 
 \section{Research Design}
@@ -369,11 +365,8 @@ The proposed research is on applying numerical methods to glacier models. The re
 To implement this research, the first step is to reproduce the results from the standard method and \citet{Jarosch2013} mass conserving method as our 1D benchmark test for the model. This has been completed. We then extend this model so that it is two dimensional and can run over multiple bed types. To this end we will start with extending the upstream solving method for the shallow ice approximation, since this method is used in the one dimensional model first done by \citet{Jarosch2013} and in the OGGM model by \citet{Maussion2019}. The method used to extend the upstream solving method into two dimensions will then be applied to both the M1 method and the MUSCL method. Then, a TVD numerical method with an additional step, such as is shown in \citet{Gottlieb1996} will be applied to both the 1D and 2D versions of the model. The 2D version of the model will then be made to accept varible bed shapes and branching before being tested against the benchmarks and applied to Peyto glacier. The first step in this process was identifying the glacier modeling equations that will be used. The second step is looking at state-of-the-art numerical techniques that can be applied to the standard ice approximation. One of these methods must then be applied to the glacier modeling equations and write up the model so that it can be forced with mass balance data.
 \subsection{Synthetic data}
 For model validation, the model will first be run with synthetic data. The model results will be compared against the mass conserving method done by \citet{Jarosch2013} the exact solutions from \citet{Bueler2005}, and the standard solving method described in \citet{Jarosch2013, Hindmarsh1996}. For this section there will be no data requirements, the SIA will be forced with synthetic mass balance data for the cliff benchmark. 
-\subsection{Realistic data}
-The third part of this research will be running the model over various glacier basins using the mass balance models produced by either the Cold Regions Hydrological model (CHRM) or the Structure for Unifying Multiple modelling Alternatives (SUMMA). 
-
-\subsection{Study area}
-The Study areas that will be looked at is Peyto Glacier. Peyto glacier is a mountain outlet glacier from the Waputik ice field. It is one of the glaciers currently being monitored by the University of Saskatchewan.It was first surveyed in 1933. Mass balance data has been been collected since 1965 and is available though \citet{WGMS2020}. 
+\subsection{Real world case study}
+The third part of this research will be running the model over a glacier using the mass balance data from a given glacier. If the mass balance provided by the data does not have the spatial detail needed then the model will be run from the mass balance data produced from a model such as CHRM. I propose using Peyto glacier for this. s Peyto glacier is a mountain outlet glacier from the Waputik ice field. It is one of the glaciers currently being monitored by the University of Saskatchewan. Mass balance data has been been collected since 1965 and is available though \citet{WGMS2020} and updated annually for various elevation bands \citep{Pradhananga2020}. There is also meteorological data collected by University of Saskatchewan including hourly air temperature, humidity, wind speed, precipitation, shortwave radiation, and longwave radiation \citep{Pradhananga2020}. The glacier data also includes surface elevation data at three different locations, the basin boundary, drainage area, landcover, and the historical and contemporary discharge data \citep{Pradhananga2020}. The ice thickness has been of Peyto has been reported in the 1980's by \citet{Holdsworth2006} and by \citet{kehrl2014}. 
 
 
 \subsection{Stretch goal}
@@ -418,13 +411,13 @@ There is not expected to be a large amount of overhead in costs, since there is 
 \end{table}
 
 \section{Timeline}
-This masters will be completed over a 2 year period, starting in September 2020, and finishing by September 2022. A tentative plan is laided out below in Figure \ref{fig:Timeline}
+This masters will be completed over a 2 year period, starting in September 2020, and finishing by September 2022. A tentative plan is laided in the attached Gahntt Chart
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=16cm]{GahnttChart.png}
-    \caption{}
-    \label{fig:Timeline}
+    \includegraphics[width=17cm]{Proposal/GahnttChart.png}
+    
+    \label{fig:Gahntt Chart}
 \end{figure}
 
 \bibliographystyle{johd}
