Updates from Overleaf

--- a/Proposal/bib.bib
+++ b/Proposal/bib.bib
@@ -18,6 +18,21 @@ title = {Radar measurements of ice thickness on Peyto Glacier, Alberta Geophysic
 isbn = {0-660-17683-1}
 }
 
+@article{Pomeroy2007,
+issn = {0885-6087},
+journal = {Hydrological processes},
+pages = {2650--2667},
+volume = {21},
+publisher = {John Wiley & Sons, Ltd},
+number = {19},
+year = {2007},
+title = {The cold regions hydrological model: a platform for basing process representation and model structure on physical evidence},
+copyright = {Copyright © 2007 John Wiley & Sons, Ltd.},
+language = {eng},
+address = {Chichester, UK},
+author = {Pomeroy, J. W and Gray, D. M and Brown, T and Hedstrom, N. R and Quinton, W. L and Granger, R. J and Carey, S. K},
+}
+
 @article{kehrl2014,
 title={Volume loss from lower Peyto Glacier, Alberta, Canada, between 1966 and 2010}, 
 volume={60}, 
